@@ -21,5 +21,6 @@ EXPORTS
 	IncreaseGoogleAnalyticsCounter@12
 	IncreaseGoogleAnalyticsCounterAsynch@12
 
+	WgxDbgPrint
 	WgxDbgPrintLastError
 	WgxDisplayLastError
