@@ -21,5 +21,6 @@ EXPORTS
 	IncreaseGoogleAnalyticsCounter
 	IncreaseGoogleAnalyticsCounterAsynch
 
+	WgxDbgPrint
 	WgxDbgPrintLastError
 	WgxDisplayLastError
