@@ -76,6 +76,7 @@ BOOL __stdcall WgxSaveLogFontStructureToFile(char *path,LOGFONT *lf);
 BOOL __stdcall IncreaseGoogleAnalyticsCounter(char *hostname,char *path,char *account);
 void __stdcall IncreaseGoogleAnalyticsCounterAsynch(char *hostname,char *path,char *account);
 
+void __cdecl WgxDbgPrint(char *format, ...);
 void __cdecl WgxDbgPrintLastError(char *format, ...);
 int  __cdecl WgxDisplayLastError(HWND hParent,UINT msgbox_flags, char *format, ...);
 
